# image_classification_trash

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd_test.yml
data/: calling_data.py  resize.py
docs/: mkdocs.yml
docs/docs/: index.md
image_classification_trash/: model_training.py  save_model.py
notebooks/: Download_and _Split_Data.ipynb  Modelling_with_ResNet18.ipynb
src/: .env  dataset.py  evaluation_.py  main_program.py  model_training.py  models.py  save_model.py  training_validation_step.py
src/gradio_apps/: app.py
tests/: test_modelling.py  test_objects.py
