[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "image_classification_trash"
version = "0.0.1"
description = "A project repository containing all codebase works of image classification"
authors = [
  { name = "rizdi.aprilian" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.ruff]
line-length = 100  # Set your preferred line length
lint.select = ["E", "F", "W"]  # Choose the error codes to check for
extend-include = ["*.py"]
exclude = [
    ".ipynb_checkpoints/*",  # Exclude all files in .ipynb_checkpoints
    "./notebooks/wandb/*",
    "*.ipynb",
    "./src/gradio_apps/*"
]

[tool.ruff.format]
exclude = ["*.ipynb", "./notebooks/wandb/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore specific errors for certain files